--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "docs:dev": "vitepress --mode development --host",
     "docs:prepare": "esno scripts/prepare.ts",
-    "docs:build": "vitepress build",
+    "docs:build": "set NODE_OPTIONS=--max-old-space-size=4096 && vitepress build",
     "docs:test": "esno ./utils/build-version.ts",
     "docs:preview": "vitepress preview",
     "docs:pdf": "npm run docs:build && node generate-pdf.js",
@@ -72,7 +72,6 @@
     "@vitejs/plugin-legacy": "^6.0.2",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "autoprefixer": "^10.4.21",
-    "busuanzi.pure.js": "^1.0.3",
     "canvas-confetti": "^1.9.3",
     "commitizen": "^4.3.1",
     "commitlint": "^19.8.0",
@@ -85,7 +84,6 @@
     "cz-customizable": "^7.4.0",
     "cz-message-helper": "^2.0.0",
     "feed": "^4.2.2",
-    "flexsearch": "^0.8.138",
     "glob": "^11.0.1",
     "husky": "^9.1.7",
     "increase-memory-limit": "^1.0.7",
@@ -98,7 +96,6 @@
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
     "puppeteer": "^24.4.0",
-    "rollup-plugin-visualizer": "^5.14.0",
     "sass": "^1.86.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
@@ -110,10 +107,8 @@
     "unplugin-version-injector": "^1.0.3",
     "unplugin-vue-components": "^28.4.1",
     "version-mark": "^0.0.5",
-    "vfonts": "^0.0.3",
     "vite-aliases": "^0.11.8",
     "vite-plugin-alias-import-checker": "^0.1.0",
-    "vite-plugin-cdn-import": "^1.0.1",
     "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-env-parse": "^1.0.15",
@@ -170,7 +165,6 @@
     "animejs": "^3.2.2",
     "ant-design-vue": "4.2.6",
     "bluebird": "^3.7.2",
-    "browserify-fs": "^1.0.0",
     "cannon-es": "^0.20.0",
     "chalk": "^5.4.1",
     "cheerio": "^1.0.0",
@@ -227,7 +221,6 @@
     "markmap-lib": "^0.18.11",
     "markmap-toolbar": "^0.18.10",
     "markmap-view": "^0.18.10",
-    "md-to-pdf": "^5.2.4",
     "medium-zoom": "^1.1.0",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
@@ -264,7 +257,6 @@
     "vitepress-reading-time": "^1.0.3",
     "vue-draggable-next": "^2.2.1",
     "vue-resize-observer": "^2.0.16",
-    "vue-timeago3": "^2.3.2",
     "vue3-autocounter": "^1.0.8",
     "vue3-simple-icons": "^13.2.0",
     "xmind-embed-viewer": "^1.2.0",
