--- a/package.json
+++ b/package.json
@@ -58,15 +58,14 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.18",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.322",
-    "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
+    "@iconify/json": "^2.2.323",
     "@release-it/conventional-changelog": "^10.0.0",
     "@types/bluebird": "^3.5.42",
     "@types/fs-extra": "^11.0.4",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.13.15",
+    "@types/node": "^22.14.0",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.175.0",
     "@vitejs/plugin-legacy": "^6.0.2",
@@ -87,7 +86,7 @@
     "glob": "^11.0.1",
     "husky": "^9.1.7",
     "increase-memory-limit": "^1.0.7",
-    "less": "^4.2.2",
+    "less": "^4.3.0",
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
@@ -95,12 +94,11 @@
     "mkcert": "^3.2.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
-    "puppeteer": "^24.4.0",
-    "sass": "^1.86.1",
+    "sass": "^1.86.3",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
-    "typescript": "^5.8.2",
-    "unocss": "65.5.0",
+    "typescript": "^5.8.3",
+    "unocss": "^66.0.0",
     "unplugin-auto-import": "^19.1.2",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
@@ -112,20 +110,15 @@
     "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-env-parse": "^1.0.15",
-    "vite-plugin-externals-new": "^1.5.5",
     "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
     "vite-plugin-mkcert": "^1.17.8",
-    "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.4",
-    "vite-plugin-vue-devtools": "^7.7.2",
-    "vite-plugin-vue-devtools-cn": "^7.5.4",
     "vitepress": "^1.6.3",
     "vitepress-demo-plugin": "^1.3.1",
-    "vitepress-export-pdf": "^1.0.0",
     "vitepress-i18n": "^1.3.3",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
@@ -133,41 +126,32 @@
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
+    "vitepress-plugin-tabs": "^0.6.0",
     "vitepress-sidebar": "^1.31.1",
-    "vitest": "^3.1.1",
-    "vue3-tabs-component": "^1.3.7"
+    "vitest": "^3.1.1"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
-    "@enra-gmbh/panolens": "^0.0.11",
     "@faker-js/faker": "^9.6.0",
     "@fingerprintjs/fingerprintjs": "^4.6.1",
     "@heroicons/vue": "^2.2.0",
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^4.3.0",
-    "@lite-tree/vue": "^1.1.6",
-    "@mdit-vue/shared": "^2.1.3",
-    "@mdit/plugin-ruby": "^0.16.0",
-    "@mdit/plugin-tasklist": "^0.16.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "@mermaid-js/mermaid-zenuml": "^0.2.0",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "1.13.8",
-    "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitest/coverage-v8": "^3.1.1",
     "@vitest/ui": "^3.1.1",
     "@vue/test-utils": "^2.4.6",
-    "@vuecs/timeago": "^1.1.0",
+    "@vuecs/timeago": "^1.1.1",
     "animate.css": "^4.1.1",
-    "animejs": "^3.2.2",
+    "animejs": "3.2.2",
     "ant-design-vue": "4.2.6",
     "bluebird": "^3.7.2",
     "cannon-es": "^0.20.0",
-    "chalk": "^5.4.1",
-    "cheerio": "^1.0.0",
     "colorthief": "^2.6.0",
     "console-ban": "^5.0.0",
     "cp-text": "^1.0.2",
@@ -242,7 +226,6 @@
     "typed.js": "^2.1.0",
     "ua-parser-js": "^2.0.3",
     "vite-plugin-inspect": "^11.0.0",
-    "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-plugin-announcement": "^0.1.4",
     "vitepress-plugin-back-to-top": "^1.0.1",
