--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-version-mark": "^0.1.4",
-    "vitepress": "^1.6.3",
+    "vitepress": "^2.0.0-alpha.4",
     "vitepress-demo-plugin": "^1.3.1",
     "vitepress-i18n": "^1.3.3",
     "vitepress-markdown-it-stepper": "^0.1.1",
@@ -180,6 +180,7 @@
     "lodash-es": "^4.17.21",
     "lunisolar": "^2.5.2",
     "markdown-it-anchor": "^9.2.0",
+    "markdown-it-async": "^2.2.0",
     "markdown-it-cjk-breaks": "^2.0.0",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-custom-attrs": "^1.0.2",
