--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "markdown-it-strikethrough-alt": "^1.0.0",
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
+    "markdown-it-task-checkbox": "^1.0.6",
     "markdown-it-variable": "^1.0.2",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
@@ -203,6 +204,7 @@
     "markmap-toolbar": "^0.18.10",
     "markmap-view": "^0.18.10",
     "medium-zoom": "^1.1.0",
+    "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
     "opentype.js": "^1.3.4",
@@ -228,7 +230,6 @@
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-group-icons": "^1.4.1",
     "vitepress-plugin-image-viewer": "^1.1.6",
-    "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-panzoom-mermaid": "^2.0.21",
     "vitepress-plugin-rss": "^0.3.1",
     "vitepress-protect-plugin": "^1.0.6",
