--- a/package.json
+++ b/package.json
@@ -62,16 +62,16 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.19",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.330",
+    "@iconify/json": "^2.2.331",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
     "@types/fs-extra": "^11.0.4",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.0",
     "@types/opentype.js": "^1.3.8",
-    "@types/three": "^0.175.0",
+    "@types/three": "^0.176.0",
     "@vitejs/plugin-legacy": "^6.1.0",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "autoprefixer": "^10.4.21",
@@ -118,6 +118,7 @@
     "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
+    "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock": "^3.0.2",
     "vite-plugin-remove-console": "^2.2.0",
