--- a/package.json
+++ b/package.json
@@ -57,21 +57,22 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@commitlint/cz-commitlint": "^19.8.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/cz-commitlint": "^19.8.1",
     "@iconify-json/devicon": "^1.2.23",
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.20",
     "@iconify/icons-emojione": "^1.2.6",
     "@iconify/json": "^2.2.335",
+    "@iconify/utils": "^2.3.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
     "@types/fs-extra": "^11.0.4",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.15.12",
+    "@types/node": "^22.15.16",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.176.0",
     "@vitejs/plugin-legacy": "^6.1.1",
@@ -79,17 +80,17 @@
     "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.3",
     "commitizen": "^4.3.1",
-    "commitlint": "^19.8.0",
+    "commitlint": "^19.8.1",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "commitlint-config-gitmoji": "^2.3.1",
     "conventional-changelog-cli": "^5.0.0",
     "conventional-changelog-gitmoji-config": "^1.5.2",
-    "cssnano": "^7.0.6",
-    "cssnano-preset-advanced": "^7.0.6",
+    "cssnano": "^7.0.7",
+    "cssnano-preset-advanced": "^7.0.7",
     "cz-customizable": "^7.4.0",
     "cz-message-helper": "^2.0.0",
-    "feed": "^4.2.2",
+    "feed": "^5.0.0",
     "glob": "^11.0.2",
     "husky": "^9.1.7",
     "increase-memory-limit": "^1.0.7",
@@ -100,7 +101,7 @@
     "mermaid": "^11.6.0",
     "mkcert": "^3.2.0",
     "mockjs": "^1.1.0",
-    "node-modules-inspector": "^0.6.7",
+    "node-modules-inspector": "^0.6.8",
     "opentype.js": "^1.3.4",
     "patch-package": "^8.0.0",
     "picocolors": "^1.1.1",
@@ -112,7 +113,7 @@
     "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
     "unocss": "^66.1.0",
-    "unplugin-auto-import": "^19.1.2",
+    "unplugin-auto-import": "^19.2.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
     "unplugin-version-injector": "^2.0.0",
