--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "deploy:win": "powershell scripts/autoDeploy.bat",
     "font:prepare": "node scripts/font_extractor.cjs",
     "font:build": "node scripts/font_reset.cjs && font-spider font/index.html --no-backup && node scripts/font_move.cjs",
+    "font:test": "node --disable-warning=ExperimentalWarning --env-file .env scripts/env-test.ts",
     "lint": "eslint --fix --ext .ts,.js,.vue src test/unit",
     "fix-memory-limit": "cross-env LIMIT=8048 increase-memory-limit",
     "prepare": "husky",
@@ -64,7 +65,7 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.20",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.335",
+    "@iconify/json": "^2.2.336",
     "@iconify/utils": "^2.3.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
@@ -72,7 +73,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.15.16",
+    "@types/node": "^22.15.17",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.176.0",
     "@vitejs/plugin-legacy": "^6.1.1",
@@ -112,7 +113,7 @@
     "standard-version": "^9.5.0",
     "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
-    "unocss": "^66.1.0",
+    "unocss": "^66.1.1",
     "unplugin-auto-import": "^19.2.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
@@ -138,6 +139,7 @@
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-llms": "^1.1.3",
     "vitepress-plugin-markdown-define": "^1.0.2",
+    "vitepress-plugin-npm-commands": "^0.8.1",
     "vitepress-plugin-tabs": "^0.7.1",
     "vitest": "^3.1.3"
   },
