--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.23",
+    "@iconify-json/devicon": "^1.2.24",
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.21",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.338",
+    "@iconify/json": "^2.2.340",
     "@iconify/utils": "^2.3.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
@@ -73,11 +73,11 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.15.21",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.176.0",
     "@vitejs/plugin-legacy": "^6.1.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.2",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
     "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.3",
     "commitizen": "^4.3.1",
@@ -107,15 +107,15 @@
     "patch-package": "^8.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.3",
-    "sass": "^1.88.0",
-    "sharp": "^0.34.1",
+    "sass": "^1.89.0",
+    "sharp": "^0.34.2",
     "sitemap": "^8.0.0",
     "sonda": "^0.7.1",
     "standard-version": "^9.5.0",
     "svgo": "^3.3.2",
     "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
-    "unocss": "^66.1.1",
+    "unocss": "^66.1.2",
     "unplugin-auto-import": "^19.2.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
@@ -137,15 +137,15 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-robots": "^1.0.5",
     "vite-plugin-version-mark": "^0.1.4",
-    "vitepress-demo-plugin": "^1.4.1",
+    "vitepress-demo-plugin": "^1.4.2",
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
-    "vitepress-plugin-llms": "^1.1.3",
+    "vitepress-plugin-llms": "^1.3.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-npm-commands": "^0.8.1",
     "vitepress-plugin-tabs": "^0.7.1",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.4"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
@@ -160,8 +160,8 @@
     "@tweenjs/tween.js": "^25.0.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^3.1.3",
-    "@vitest/ui": "^3.1.3",
+    "@vitest/coverage-v8": "^3.1.4",
+    "@vitest/ui": "^3.1.4",
     "@vue/test-utils": "^2.4.6",
     "@vuecs/timeago": "^1.1.1",
     "animate.css": "^4.1.1",
@@ -183,6 +183,7 @@
     "echarts-gl": "^2.0.9",
     "element-resize-detector": "^1.2.4",
     "esno": "^4.8.0",
+    "figures": "^6.1.0",
     "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.3.0",
@@ -241,12 +242,12 @@
     "three": "^0.176.0",
     "typed.js": "^2.1.0",
     "ua-parser-js": "^2.0.3",
-    "vite-plugin-inspect": "^11.0.1",
+    "vite-plugin-inspect": "^11.1.0",
     "vitepress": "^2.0.0-alpha.5",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
-    "vitepress-plugin-group-icons": "^1.5.4",
+    "vitepress-plugin-group-icons": "^1.5.5",
     "vitepress-plugin-image-viewer": "^1.1.6",
     "vitepress-plugin-panzoom-mermaid": "^2.0.21",
     "vitepress-plugin-rss": "^0.3.1",
