--- a/package.json
+++ b/package.json
@@ -63,9 +63,9 @@
     "@commitlint/cz-commitlint": "^19.8.1",
     "@iconify-json/devicon": "^1.2.24",
     "@iconify-json/skill-icons": "^1.2.0",
-    "@iconify-json/vscode-icons": "^1.2.21",
+    "@iconify-json/vscode-icons": "^1.2.22",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.342",
+    "@iconify/json": "^2.2.345",
     "@iconify/utils": "^2.3.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
@@ -73,9 +73,9 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.15.26",
+    "@types/node": "^22.15.29",
     "@types/opentype.js": "^1.3.8",
-    "@types/three": "^0.176.0",
+    "@types/three": "^0.177.0",
     "@vitejs/plugin-legacy": "^6.1.1",
     "@vitejs/plugin-vue-jsx": "^4.2.0",
     "autoprefixer": "^10.4.21",
@@ -107,7 +107,7 @@
     "patch-package": "^8.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.4",
-    "sass": "^1.89.0",
+    "sass": "^1.89.1",
     "sharp": "^0.34.2",
     "sitemap": "^8.0.0",
     "sonda": "^0.7.1",
@@ -115,7 +115,7 @@
     "svgo": "^3.3.2",
     "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
-    "unocss": "^66.1.2",
+    "unocss": "^66.1.3",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
@@ -137,7 +137,7 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-robots": "^1.0.5",
     "vite-plugin-version-mark": "^0.1.4",
-    "vitepress-demo-plugin": "^1.4.4",
+    "vitepress-demo-plugin": "^1.4.5",
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
@@ -145,7 +145,7 @@
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-npm-commands": "^0.8.1",
     "vitepress-plugin-tabs": "^0.7.1",
-    "vitest": "^3.1.4"
+    "vitest": "^3.2.0"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
@@ -160,7 +160,7 @@
     "@tweenjs/tween.js": "^25.0.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^3.1.4",
+    "@vitest/coverage-v8": "^3.2.0",
     "@vitest/ui": "^3.1.4",
     "@vue/test-utils": "^2.4.6",
     "@vuecs/timeago": "^1.1.1",
@@ -189,6 +189,7 @@
     "fs-extra": "^11.3.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
+    "hashids": "^2.3.0",
     "html2particle": "^0.0.10",
     "jsencrypt": "^3.3.2",
     "kinet": "^2.2.1",
@@ -239,7 +240,7 @@
     "svg-pan-zoom-container": "^0.6.1",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
-    "three": "^0.176.0",
+    "three": "^0.177.0",
     "typed.js": "^2.1.0",
     "ua-parser-js": "^2.0.3",
     "vite-plugin-inspect": "^11.1.0",
