--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.22",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.347",
+    "@iconify/json": "^2.2.349",
     "@iconify/utils": "^2.3.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
@@ -162,6 +162,8 @@
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitest/coverage-v8": "^3.2.3",
     "@vitest/ui": "^3.2.3",
+    "@vue-styled-components/core": "^1.12.0",
+    "@vue-styled-components/plugin": "^1.0.1",
     "@vue/test-utils": "^2.4.6",
     "@vuecs/timeago": "^1.1.1",
     "animate.css": "^4.1.1",
@@ -220,9 +222,9 @@
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
     "markmap-common": "^0.18.9",
-    "markmap-lib": "^0.18.11",
+    "markmap-lib": "^0.18.12",
     "markmap-toolbar": "^0.18.10",
-    "markmap-view": "^0.18.10",
+    "markmap-view": "^0.18.12",
     "medium-zoom": "^1.1.0",
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
