--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "test:unit": "vitest --ui",
     "mkcert:install": "mkcert -install",
     "mkcert:uninstall": "mkcert -uninstall",
-    "export-pdf": "press-export-pdf export ./zh-CN/gallery"
+    "export-pdf": "press-export-pdf export ./zh-CN/gallery",
+    "ncu": "npx npm-check-updates"
   },
   "imports": {
     "#*": "./*"
@@ -63,17 +64,19 @@
     "@commitlint/cz-commitlint": "^19.8.1",
     "@iconify-json/devicon": "^1.2.28",
     "@iconify-json/skill-icons": "^1.2.0",
-    "@iconify-json/vscode-icons": "^1.2.22",
+    "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.349",
+    "@iconify/json": "^2.2.351",
     "@iconify/utils": "^2.3.0",
+    "@julr/vite-plugin-validate-env": "^2.1.0",
+    "@plugin-web-update-notification/vite": "^2.0.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
     "@types/fs-extra": "^11.0.4",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.0.1",
+    "@types/node": "^24.0.3",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.177.0",
     "@vitejs/plugin-legacy": "^6.1.1",
@@ -92,21 +95,21 @@
     "cz-customizable": "^7.4.0",
     "cz-message-helper": "^2.0.0",
     "feed": "^5.1.0",
-    "glob": "^11.0.2",
+    "glob": "^11.0.3",
     "husky": "^9.1.7",
     "increase-memory-limit": "^1.0.7",
     "less": "^4.3.0",
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
-    "mermaid": "^11.6.0",
+    "mermaid": "^11.7.0",
     "mkcert": "^3.2.0",
     "mockjs": "^1.1.0",
     "node-modules-inspector": "^0.6.9",
     "opentype.js": "^1.3.4",
     "patch-package": "^8.0.0",
     "picocolors": "^1.1.1",
-    "postcss": "^8.5.5",
+    "postcss": "^8.5.6",
     "sass": "^1.89.2",
     "sharp": "^0.34.2",
     "sitemap": "^8.0.0",
@@ -115,7 +118,7 @@
     "svgo": "^3.3.2",
     "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
-    "unocss": "^66.2.0",
+    "unocss": "^66.2.3",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
@@ -125,27 +128,33 @@
     "vite-plugin-alias-import-checker": "^0.1.0",
     "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-compression2": "^2.0.1",
+    "vite-plugin-conditional-compiler": "^0.3.1",
     "vite-plugin-env-parse": "^1.0.15",
     "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
-    "vite-plugin-image-optimizer": "^1.1.8",
+    "vite-plugin-image-optimizer": "^1.1.9",
+    "vite-plugin-image-placeholder": "^1.1.0",
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock": "^3.0.2",
+    "vite-plugin-mock-dev-server": "^1.8.7",
     "vite-plugin-progress": "^0.0.7",
+    "vite-plugin-qrcode": "^0.2.4",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-robots": "^1.0.5",
+    "vite-plugin-shortcuts": "^0.1.0",
+    "vite-plugin-tips": "^2.1.2",
     "vite-plugin-version-mark": "^0.1.4",
     "vitepress-demo-plugin": "^1.4.5",
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
-    "vitepress-plugin-llms": "^1.5.0",
+    "vitepress-plugin-llms": "^1.5.1",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-npm-commands": "^0.8.1",
     "vitepress-plugin-tabs": "^0.7.1",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
@@ -155,13 +164,13 @@
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^5.0.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
-    "@mermaid-js/mermaid-zenuml": "^0.2.0",
+    "@mermaid-js/mermaid-zenuml": "^0.2.1",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@tweenjs/tween.js": "^25.0.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^3.2.3",
-    "@vitest/ui": "^3.2.3",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "@vue-styled-components/core": "^1.12.0",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vue/test-utils": "^2.4.6",
@@ -246,7 +255,8 @@
     "three": "^0.177.0",
     "typed.js": "^2.1.0",
     "ua-parser-js": "^2.0.3",
-    "vite-plugin-inspect": "^11.1.0",
+    "vite-plugin-find-image-duplicates": "^0.0.10",
+    "vite-plugin-inspect": "^11.2.0",
     "vitepress": "^2.0.0-alpha.5",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-mermaid-renderer": "^1.0.14",
@@ -265,7 +275,7 @@
     "yuppie-ui": "^0.0.11"
   },
   "overrides": {
-    "mermaid": "^11.6.0",
+    "mermaid": "^11.7.0",
     "release-it": "^18.0.0",
     "vite": "^6.0.0",
     "vite-plugin-html": "^3.2.2",
