--- a/package.json
+++ b/package.json
@@ -64,12 +64,13 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.42",
+    "@iconify-json/devicon": "^1.2.43",
     "@iconify-json/skill-icons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.30",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.379",
+    "@iconify/json": "^2.2.380",
     "@iconify/utils": "^3.0.1",
+    "@plugin-web-update-notification/vite": "^2.0.2",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/fs-extra": "^11.0.4",
@@ -109,7 +110,7 @@
     "standard-version": "^9.5.0",
     "svgo": "^4.0.0",
     "typescript": "^5.9.2",
-    "unocss": "^66.4.2",
+    "unocss": "^66.5.0",
     "unplugin-auto-import": "^20.1.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.2.0",
@@ -118,7 +119,7 @@
     "vite-aliases": "^0.11.8",
     "vite-plugin-alias-import-checker": "^0.1.0",
     "vite-plugin-chunk-split": "^0.5.0",
-    "vite-plugin-compression2": "^2.2.0",
+    "vite-plugin-compression2": "^2.2.1",
     "vite-plugin-env-parse": "^1.0.15",
     "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-git-revision-info": "^1.1.0",
@@ -134,6 +135,7 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-robots": "^1.0.5",
     "vite-plugin-shortcuts": "^0.1.0",
+    "vite-plugin-simple-html": "^1.0.1",
     "vite-plugin-version-mark": "^0.2.2",
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
@@ -142,7 +144,7 @@
     "vitepress-plugin-llms": "^1.7.3",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-mermaid": "^2.0.17",
-    "vitepress-plugin-setfrontmatter": "^1.2.1",
+    "vitepress-plugin-setfrontmatter": "^1.2.2",
     "vitepress-vue-demo": "^1.0.10",
     "vitest": "^3.2.4"
   },
@@ -173,7 +175,7 @@
     "chalk": "^5.6.0",
     "cross-env": "^10.0.0",
     "crypto": "^1.0.1",
-    "dayjs": "^1.11.15",
+    "dayjs": "^1.11.18",
     "deepmerge-ts": "^7.1.5",
     "default-passive-events": "^4.0.0",
     "driver.js": "^1.3.6",
@@ -212,7 +214,7 @@
     "ofetch": "^1.4.1",
     "ora": "^8.2.0",
     "oxc-minify": "^0.82.3",
-    "pagefind": "^1.3.0",
+    "pagefind": "^1.4.0",
     "pinia": "^3.0.3",
     "pinia-shared-state": "^1.0.1",
     "pinia-undo": "^0.2.4",
