--- a/package.json
+++ b/package.json
@@ -68,10 +68,10 @@
     "@iconify-json/skill-icons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.30",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.381",
+    "@iconify/json": "^2.2.382",
     "@iconify/utils": "^3.0.1",
-    "@plugin-web-update-notification/vite": "^2.0.2",
     "@julr/vite-plugin-validate-env": "^2.2.0",
+    "@plugin-web-update-notification/vite": "^2.0.2",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
@@ -103,14 +103,14 @@
     "postcss": "^8.5.6",
     "postcss-px-to-viewport": "^1.1.1",
     "purgecss": "^7.0.2",
-    "rolldown-vite": "^7.1.5",
-    "sass-embedded": "^1.92.0",
+    "rolldown-vite": "^7.1.8",
+    "sass-embedded": "^1.92.1",
     "sharp": "^0.34.3",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "svgo": "^4.0.0",
     "typescript": "^5.9.2",
-    "unocss": "^66.5.0",
+    "unocss": "^66.5.1",
     "unplugin-auto-import": "^20.1.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.2.0",
@@ -169,10 +169,11 @@
     "@vue-styled-components/core": "^1.13.2",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vue/test-utils": "^2.4.6",
+    "@zumer/snapdom": "^1.9.9",
     "animate.css": "^4.1.1",
     "animejs": "4.1.3",
     "ant-design-vue": "4.2.6",
-    "chalk": "^5.6.0",
+    "chalk": "^5.6.2",
     "cross-env": "^10.0.0",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.18",
@@ -246,13 +247,13 @@
     "yuppie-ui": "^0.0.11"
   },
   "overrides": {
-    "@zenuml/core": "^3.39.0",
+    "@zenuml/core": "^3.39.3",
     "highlight.js": "^11.11.1",
     "mermaid": "^11.11.0",
     "prismjs": "^1.30.0",
     "release-it": "^19.0.4",
     "svg-pan-zoom": "^3.6.2",
-    "vite": "npm:rolldown-vite@7.1.5",
+    "vite": "npm:rolldown-vite@7.1.8",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.12",
     "vue": "^3.5.21"
