--- a/package.json
+++ b/package.json
@@ -64,15 +64,16 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.43",
+    "@iconify-json/devicon": "^1.2.44",
     "@iconify-json/skill-icons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.30",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.385",
+    "@iconify/json": "^2.2.386",
     "@iconify/utils": "^3.0.2",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.2",
     "@release-it/conventional-changelog": "^10.0.1",
+    "@testing-library/vue": "^8.1.0",
     "@types/element-resize-detector": "^1.1.6",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
@@ -105,7 +106,7 @@
     "postcss-px-to-viewport": "^1.1.1",
     "purgecss": "^7.0.2",
     "rolldown-vite": "^7.1.11",
-    "sass-embedded": "^1.92.1",
+    "sass-embedded": "^1.93.0",
     "sharp": "^0.34.4",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
@@ -116,7 +117,7 @@
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.3.0",
     "unplugin-version-injector": "^2.1.1",
-    "unplugin-vue-components": "^29.0.0",
+    "unplugin-vue-components": "^29.1.0",
     "vite-aliases": "^0.11.8",
     "vite-plugin-alias-import-checker": "^0.1.0",
     "vite-plugin-chunk-split": "^0.5.0",
@@ -191,8 +192,8 @@
     "gsap": "^3.13.0",
     "hashids": "^2.3.0",
     "html2particle": "^0.0.10",
-    "lunisolar": "^2.6.0",
     "lodash-es": "^4.17.21",
+    "lunisolar": "^2.6.0",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-footnote": "^4.0.0",
