--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@commitlint/cz-commitlint": "^19.8.1",
+    "@commitlint/cli": "^20.0.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@commitlint/cz-commitlint": "^20.0.0",
     "@iconify-json/devicon": "^1.2.45",
     "@iconify-json/skill-icons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.30",
@@ -84,7 +84,7 @@
     "canvas-confetti": "^1.9.3",
     "code-inspector-plugin": "^1.2.10",
     "commitizen": "^4.3.1",
-    "commitlint": "^19.8.1",
+    "commitlint": "^20.0.0",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "commitlint-config-gitmoji": "^2.3.1",
@@ -98,7 +98,6 @@
     "increase-memory-limit": "^1.0.7",
     "jszip": "^3.10.1",
     "markdown-it": "^14.1.0",
-    "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
     "mkcert": "^3.2.0",
     "picocolors": "^1.1.1",
@@ -138,15 +137,16 @@
     "vite-plugin-robots": "^1.0.5",
     "vite-plugin-simple-html": "^1.0.1",
     "vite-plugin-version-mark": "^0.2.2",
+    "vitepress-demo-plugin": "^1.5.0",
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
-    "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-diagrams": "^1.0.0",
     "vitepress-plugin-llms": "^1.7.5",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-mermaid": "^2.0.17",
+    "vitepress-plugin-npm-commands": "^0.8.1",
     "vitepress-plugin-setfrontmatter": "^1.2.3",
-    "vitepress-vue-demo": "^1.0.10",
+    "vitepress-plugin-tabs": "^0.7.3",
     "vitest": "^3.2.4"
   },
   "dependencies": {
@@ -172,7 +172,7 @@
     "@vue/test-utils": "^2.4.6",
     "@zumer/snapdom": "^1.9.11",
     "animate.css": "^4.1.1",
-    "animejs": "4.1.3",
+    "animejs": "4.1.4",
     "ant-design-vue": "4.2.6",
     "chalk": "^5.6.2",
     "cross-env": "^10.0.0",
@@ -199,6 +199,7 @@
     "markdown-it-front-matter": "^0.2.4",
     "markdown-it-github-alerts": "^1.0.0",
     "markdown-it-hashmention": "^0.3.9",
+    "markdown-it-mathjax3-pro": "^1.0.0",
     "markdown-it-multimd-table-ext": "^4.2.32",
     "markdown-it-multiple-choice": "^1.1.5",
     "markdown-it-named-code-blocks": "^1.0.6",
@@ -215,7 +216,7 @@
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
     "ora": "^9.0.0",
-    "oxc-minify": "^0.89.0",
+    "oxc-minify": "^0.93.0",
     "pagefind": "^1.4.0",
     "pinia": "^3.0.3",
     "pinyin-match": "^1.2.8",
